--- a/ch-07/package.json
+++ b/ch-07/package.json
@@ -5,6 +5,11 @@
   "license": "MIT",
   "dependencies": {
     "@types/node": "^15.6.1",
-    "ts-node": "^10.0.0"
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
+  },
+  "scripts": {
+    "dev": "ts-node src",
+    "build": "tsc && node dist"
   }
 }
