--- a/ch09/01/package.json
+++ b/ch09/01/package.json
@@ -13,5 +13,11 @@
     "@types/ramda": "^0.27.40",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node src",
+    "build": "tsc && node dist"
   }
-}
+  }
+
